--- a/StudentskaSluzba/StudentskaSluzba/View/EditStudent.xaml
+++ b/StudentskaSluzba/StudentskaSluzba/View/EditStudent.xaml
@@ -137,19 +137,25 @@
                     </WrapPanel>
                 </Grid>
             </TabItem>
-            <TabItem Header="Položeni">
-                <DataGrid DockPanel.Dock="Bottom"
+            <TabItem Header="Položeni" >
+                <StackPanel>
+                    <WrapPanel FlowDirection="LeftToRight">
+                        <Button Content="Poništi ocenu" IsCancel="True" HorizontalAlignment="Left" VerticalAlignment="Top"
+                    Margin="0, 10, 0, 10" Click="PonistiOcenu_Click"/>
+                    </WrapPanel>
+                    <DataGrid DockPanel.Dock="Bottom"
                         ItemsSource="{Binding Path=Polozeni, UpdateSourceTrigger=PropertyChanged}"
                         SelectedItem="{Binding Path=SelectedPolozeni, UpdateSourceTrigger=PropertyChanged}"
                         AutoGenerateColumns="False" IsReadOnly="True">
-                    <DataGrid.Columns>
-                        <DataGridTextColumn Header="Šifra predmeta" Width="*" Binding="{Binding Predmet.Sifra}"></DataGridTextColumn>
-                        <DataGridTextColumn Header="Naziv predmeta" Width="*" Binding="{Binding Predmet.Naziv}"></DataGridTextColumn>
-                        <DataGridTextColumn Header="ESPB" Width="50" Binding="{Binding Predmet.BrojESPB}"></DataGridTextColumn>
-                        <DataGridTextColumn Header="Ocena" Width="50" Binding="{Binding VrednostOcene}"></DataGridTextColumn>
-                        <DataGridTextColumn Header="Datum" Width="100" Binding="{Binding DatumPolaganja}"></DataGridTextColumn>
-                    </DataGrid.Columns>
-                </DataGrid>
+                        <DataGrid.Columns>
+                            <DataGridTextColumn Header="Šifra predmeta" Width="*" Binding="{Binding Predmet.Sifra}"></DataGridTextColumn>
+                            <DataGridTextColumn Header="Naziv predmeta" Width="*" Binding="{Binding Predmet.Naziv}"></DataGridTextColumn>
+                            <DataGridTextColumn Header="ESPB" Width="50" Binding="{Binding Predmet.BrojESPB}"></DataGridTextColumn>
+                            <DataGridTextColumn Header="Ocena" Width="50" Binding="{Binding VrednostOcene}"></DataGridTextColumn>
+                            <DataGridTextColumn Header="Datum" Width="100" Binding="{Binding DatumPolaganja}"></DataGridTextColumn>
+                        </DataGrid.Columns>
+                    </DataGrid>
+                </StackPanel>
             </TabItem>
             <TabItem Header="Nepoloženi">
                 <DataGrid DockPanel.Dock="Bottom"
