--- a/StudentskaSluzba/StudentskaSluzba/View/AddStudentToPredmet.xaml
+++ b/StudentskaSluzba/StudentskaSluzba/View/AddStudentToPredmet.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:StudentskaSluzba.View"
         mc:Ignorable="d"
-        Title="Izmena studenta" Height="600" Width="500"
+        Title="Dodavanje studenta na predmet" Height="300" Width="300"
         WindowStartupLocation="CenterScreen">
     <Grid>
         <StackPanel>
