--- a/StudentskaSluzba/StudentskaSluzba/View/AddStudentToPredmet.xaml
+++ b/StudentskaSluzba/StudentskaSluzba/View/AddStudentToPredmet.xaml
@@ -11,9 +11,9 @@
         <StackPanel>
             <WrapPanel DockPanel.Dock="Bottom" FlowDirection="LeftToRight">
                 <Button Content="Dodaj" IsCancel="True" HorizontalAlignment="Left" VerticalAlignment="Top"
-                    Margin="0, 10, 10, 10" Click="PonistiOcenu_Click"/>
+                    Margin="0, 10, 10, 10" Click="AddStudent_Click"/>
                 <Button Content="Odustani" IsCancel="True" HorizontalAlignment="Left" VerticalAlignment="Top"
-                    Margin="0, 10, 0, 10" Click="PonistiOcenu_Click"/>
+                    Margin="0, 10, 0, 10" Click="CancelButton_Click"/>
             </WrapPanel>
             <DataGrid DockPanel.Dock="Top" HeadersVisibility="None"
                         ItemsSource="{Binding Path=Predmet, UpdateSourceTrigger=PropertyChanged}"
