--- a/StudentskaSluzba/StudentskaSluzba/View/CreateOcena.xaml
+++ b/StudentskaSluzba/StudentskaSluzba/View/CreateOcena.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:StudentskaSluzba.View"
         mc:Ignorable="d"
-        Title="CreateOcena" Height="225" Width="300">
+        Title="Polaganje" Height="225" Width="300">
     <Window.Resources>
         <ControlTemplate x:Key="ValidationTemplate">
             <StackPanel>
