--- a/StudentskaSluzba/StudentskaSluzba/View/CreateOcena.xaml
+++ b/StudentskaSluzba/StudentskaSluzba/View/CreateOcena.xaml
@@ -56,7 +56,7 @@
                     <ComboBoxItem FontSize="10" Tag="10">10</ComboBoxItem>
                 </ComboBox>
                 <DatePicker Grid.Row="3" Grid.Column="3" Height="25"
-                     SelectedDate="{Binding Path=_Ocena.Datum, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True}"
+                     SelectedDate="{Binding Path=_Ocena.DatumPolaganja, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True}"
                      Validation.ErrorTemplate="{StaticResource ValidationTemplate}">
                 </DatePicker>
             </Grid>
