--- a/StudentskaSluzba/StudentskaSluzba/View/CreateOcena.xaml
+++ b/StudentskaSluzba/StudentskaSluzba/View/CreateOcena.xaml
@@ -5,7 +5,8 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:StudentskaSluzba.View"
         mc:Ignorable="d"
-        Title="Polaganje" Height="225" Width="300">
+        Title="Polaganje" Height="250" Width="300"
+        WindowStartupLocation="CenterScreen">
     <Window.Resources>
         <ControlTemplate x:Key="ValidationTemplate">
             <StackPanel>
@@ -43,7 +44,7 @@
                      Validation.ErrorTemplate="{StaticResource ValidationTemplate}">
                 </TextBox>
                 <TextBox Grid.Row="1" Grid.Column="1" Height="20" IsReadOnly="True" IsEnabled="False" Background="Gray"
-                     Text="{Binding Path=_Ocena.Predmet.Naiv, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True}"
+                     Text="{Binding Path=_Ocena.Predmet.Naziv, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True}"
                      Validation.ErrorTemplate="{StaticResource ValidationTemplate}">
                 </TextBox>
                 <ComboBox SelectedValuePath="Content" x:Name="comboBoxGodina" Grid.Row="2" Grid.Column="1" Height="25"
