--- a/StudentskaSluzba/StudentskaSluzba/View/EditProfesor.xaml
+++ b/StudentskaSluzba/StudentskaSluzba/View/EditProfesor.xaml
@@ -168,10 +168,10 @@
             <TabItem Header="Predmeti">
                 <StackPanel>
                     <WrapPanel FlowDirection="LeftToRight">
-                       <!-- <Button Content="Dodaj predmet" IsCancel="True" HorizontalAlignment="Left" VerticalAlignment="Top"
-                    Margin="0, 10, 10, 10" Click="DodajPredmet_Click"/>
+                        <Button Content="Dodaj predmet" IsCancel="True" HorizontalAlignment="Left" VerticalAlignment="Top"
+                    Margin="0, 10, 10, 10" />
                         <Button Content="Ukloni predmet" IsCancel="True" HorizontalAlignment="Left" VerticalAlignment="Top"
-                    Margin="0, 10, 10, 10" Click="ObrisiStudentPredmet_Click"/>-->
+                    Margin="0, 10, 10, 10" />
                     </WrapPanel>
                     <DataGrid x:Name="PredmetDataGrid" DockPanel.Dock="Bottom"
                         ItemsSource="{Binding Path=Predmeti, UpdateSourceTrigger=PropertyChanged}"
