--- a/StudentskaSluzba/StudentskaSluzba/View/AddPredmetToProfesor.xaml
+++ b/StudentskaSluzba/StudentskaSluzba/View/AddPredmetToProfesor.xaml
@@ -42,10 +42,10 @@
                 </DataGrid.Columns>
             </DataGrid>
             <WrapPanel Grid.Row="1" FlowDirection="RightToLeft">
-                <Button Content="Dodaj" IsCancel="True" HorizontalAlignment="Left" VerticalAlignment="Top"
-                    Margin="10, 10, 10, 10" />
                 <Button Content="Odustani" IsCancel="True" HorizontalAlignment="Left" VerticalAlignment="Top"
-                    Margin="0, 10, 0, 10" />
+                    Margin="10, 10, 10, 10" Click="CancelButton_Click" />
+                <Button Content="Dodaj" IsCancel="True" HorizontalAlignment="Left" VerticalAlignment="Top"
+                    Margin="0, 10, 0, 10" Click="AddPredmet_Click"/>
             </WrapPanel>
         </Grid>
     </Grid>
