--- a/StudentskaSluzba/StudentskaSluzba/View/EditProfesor.xaml
+++ b/StudentskaSluzba/StudentskaSluzba/View/EditProfesor.xaml
@@ -169,9 +169,9 @@
                 <StackPanel>
                     <WrapPanel FlowDirection="LeftToRight">
                         <Button Content="Dodaj predmet" IsCancel="True" HorizontalAlignment="Left" VerticalAlignment="Top"
-                    Margin="0, 10, 10, 10" />
+                    Margin="0, 10, 10, 10" Click="AddPredmet_Click"/>
                         <Button Content="Ukloni predmet" IsCancel="True" HorizontalAlignment="Left" VerticalAlignment="Top"
-                    Margin="0, 10, 10, 10" />
+                    Margin="0, 10, 10, 10" Click="Button_Click" />
                     </WrapPanel>
                     <DataGrid x:Name="PredmetDataGrid" DockPanel.Dock="Bottom"
                         ItemsSource="{Binding Path=Predmeti, UpdateSourceTrigger=PropertyChanged}"
