--- a/StudentskaSluzba/StudentskaSluzba/View/EditPredmet.xaml
+++ b/StudentskaSluzba/StudentskaSluzba/View/EditPredmet.xaml
@@ -68,6 +68,20 @@
                      Text="{Binding Path=Predmet.BrojESPB, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True}"
                      Validation.ErrorTemplate="{StaticResource ValidationTemplate}">
             </TextBox>
+            <Grid Grid.Row="5" Grid.Column="1" Height="20">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition></ColumnDefinition>
+                    <ColumnDefinition></ColumnDefinition>
+                    <ColumnDefinition></ColumnDefinition>
+                </Grid.ColumnDefinitions>
+                <TextBox Grid.Row="0" Grid.Column="0" Height="20"
+                     Text="{Binding Path=Predmet.Profesor.Ime, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True}"
+                     Validation.ErrorTemplate="{StaticResource ValidationTemplate}">
+                </TextBox>
+                <Button Width="20" HorizontalAlignment="Center" Grid.Row="0" Grid.Column="1" Content="+" IsCancel="True" Click="CancelButton_Click"/>
+                <Button Width="20" HorizontalAlignment="Center" Grid.Row="0" Grid.Column="2" Content="-" IsCancel="True" Click="CancelButton_Click"/>
+                
+            </Grid>
         </Grid>
         <WrapPanel Grid.Row="1" FlowDirection="RightToLeft">
             <Button Content="Odustani" IsCancel="True" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="50, -30, 20, 5" Click="CancelButton_Click"/>
